--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,11 @@
         }
     },
     "require": {
+        "php": "7.0.*",
+        "ext-json": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.5",
+        "monolog/monolog": "^1.24"
     }
 }
